main/default/objects/Integration_Error__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <description>This is a general purpose field for storing what we were trying to do when integrating when we failed.  Both Action and the related object are taken into account when reading the values here:

Object(Action): Value
---------------------
Account(Update): Comma delimited field names
Contact(Update): N/A
Contact(Delete): ICC Contact ID
Service Location(Insert): Closed Won Opportunity ID (earliest closed date)
Service Location(Update): Comma delimited field names</description>
    <label>Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>