main/default/objects/Integration_Error__c/validationRules/Object_ID_Must_Be_15_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Object_ID_Must_Be_15_Characters</fullName>
    <active>true</active>
    <description>Object ID must be at least 15 characters.</description>
    <errorConditionFormula>LEN( ObjectID__c )  &lt; 15</errorConditionFormula>
    <errorMessage>Object ID must be at least 15 characters.</errorMessage>
</ValidationRule>